k8s-production/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - users.harjukallio.club
      secretName: harjukallio-club
  rules:
    - host: users.harjukallio.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-service-frontend-cluster-ip-service
                port:
                  number: 3001
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: authentication-service-backend-proxy-cluster-ip-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-module-federation
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: users.harjukallio.club
      http:
        paths:
          - path: /main_app_mf(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 3001
